update: update css DKVPP +dailyreport

--- a/src/app/components/dailyreport/dailyreport.component.html
+++ b/src/app/components/dailyreport/dailyreport.component.html
@@ -9,28 +9,19 @@
       <!-- Date range -->
       <div class="form-group">
         <label for="dateStart">Từ ngày</label>
-        <input type="date" id="dateStart" 
-          [(ngModel)]="searchParams.dateStart"
-          class="form-control form-control-sm">
+        <input type="date" id="dateStart" [(ngModel)]="searchParams.dateStart" class="form-control form-control-sm">
       </div>
 
       <div class="form-group">
         <label for="dateEnd">Đến ngày</label>
-        <input type="date" id="dateEnd" 
-          [(ngModel)]="searchParams.dateEnd"
-          class="form-control form-control-sm">
+        <input type="date" id="dateEnd" [(ngModel)]="searchParams.dateEnd" class="form-control form-control-sm">
       </div>
 
       <!-- Employee -->
       <div class="form-group">
         <label for="cboEmployee">Nhân viên</label>
-        <ng-select id="cboEmployee" 
-          class="department-select" 
-          [items]="dataEmployees"
-          bindLabel="FullName" 
-          [bindValue]="'UserID'"
-          [(ngModel)]="searchParams.userID"
-          placeholder="Chọn nhân viên">
+        <ng-select id="cboEmployee" class="department-select" [items]="dataEmployees" bindLabel="FullName"
+          [bindValue]="'UserID'" [(ngModel)]="searchParams.userID" placeholder="Chọn nhân viên">
           <ng-template ng-header-tmp>
             <div class="row font-weight-bold text-center">
               <div class="col-4" style="font-weight: bold;">Mã nhân viên</div>
@@ -49,21 +40,16 @@
       <!-- Keyword -->
       <div class="form-group">
         <label for="txtKeyword">Từ khóa</label>
-        <input type="text" id="txtKeyword" 
-          [(ngModel)]="searchParams.keyword"
-          class="form-control form-control-sm" 
+        <input type="text" id="txtKeyword" [(ngModel)]="searchParams.keyword" class="form-control form-control-sm"
           placeholder="Từ khóa">
       </div>
 
       <!-- Buttons -->
       <div class="form-group mt-3">
-        <button class="btn btn-outline-primary btn-outline-sm me-2" 
-          data-bs-dismiss="offcanvas" (click)="search()"
-          >
+        <button class="btn btn-outline-primary btn-outline-sm me-2" data-bs-dismiss="offcanvas" (click)="search()">
           <i class="fas fa-search"></i> Tìm kiếm
         </button>
-        <button class="btn btn-outline-secondary btn-outline-sm"
-          >
+        <button class="btn btn-outline-secondary btn-outline-sm">
           <i class="fas fa-undo"></i> Đặt lại
         </button>
       </div>
@@ -76,7 +62,7 @@
     <div class="button-section">
       <!-- Search group -->
       <div class="button-group">
-        <button class="btn btn-outline-primary" type="button" data-bs-toggle="offcanvas" 
+        <button class="btn btn-outline-primary" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#searchOffcanvas">
           <i class="fas fa-search"></i>
         </button>
@@ -94,65 +80,53 @@
 
     <!-- Tables -->
     <div class="card-body">
-        <div class="custom-tabs-container">
-            <ul class="nav nav-tabs" id="customTab3" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="tab-oneAA" data-bs-toggle="tab"
-                        href="#oneAA" role="tab" aria-controls="oneAA"
-                        aria-selected="true" (click)="setCheckModeExcel(0)">Hành chính nhân sự IT</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="tab-twoAA" data-bs-toggle="tab"
-                        href="#twoAA" role="tab" aria-controls="twoAA"
-                        aria-selected="false" (click)="setCheckModeExcel(1)">Cắt phim</a>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="tab-threeAA" data-bs-toggle="tab"
-                        href="#threeAA" role="tab" aria-controls="threeAA"
-                        aria-selected="false" (click)="setCheckModeExcel(2)">Lái xe</a>
-                </li>
-            </ul>
-            <div class="tab-content" id="customTabContent3">
-                <div class="tab-pane fade show active" id="oneAA" role="tabpanel">
-                    <div class="card mb-3">
-                        <div class="card-body">
-                              <div class="tables-wrapper">
-                                <div class="table-container mb-3">
-                                  <div id="table_dailyreportHCNSIT" class="custom-tabulator"></div>
-                                </div>
-                              </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="tab-pane fade" id="twoAA" role="tabpanel">
-                      <!-- Card start -->
-                      <div class="card mb-3">
-                        <div class="card-body">
-                          <div class="tables-wrapper">
-                            <div class="table-container mb-3">
-                              <div id="table_dailyreportCP" class="custom-tabulator"></div>
-                            </div>
-                          </div>
-                        </div>
-                    </div>
-                    <!-- Card end -->
-                </div>
-                <div class="tab-pane fade" id="threeAA" role="tabpanel">
-                      <!-- Card start -->
-                      <div class="card mb-3">
-                        <div class="card-body">
-                          <div class="tables-wrapper">
-                            <div class="table-container mb-3">
-                              <div id="table_dailyreportLX" class="custom-tabulator"></div>
-                            </div>
-                          </div>
-                        </div>
-                    </div>
-                    <!-- Card end -->
-                </div>
+      <div class="custom-tabs-container">
+        <ul class="nav nav-tabs" id="customTab3" role="tablist">
+          <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="tab-oneAA" data-bs-toggle="tab" href="#oneAA" role="tab"
+              aria-controls="oneAA" aria-selected="true" (click)="setCheckModeExcel(0)">Hành chính nhân sự IT</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="tab-twoAA" data-bs-toggle="tab" href="#twoAA" role="tab" aria-controls="twoAA"
+              aria-selected="false" (click)="setCheckModeExcel(1)">Cắt phim</a>
+          </li>
+          <li class="nav-item" role="presentation">
+            <a class="nav-link" id="tab-threeAA" data-bs-toggle="tab" href="#threeAA" role="tab" aria-controls="threeAA"
+              aria-selected="false" (click)="setCheckModeExcel(2)">Lái xe</a>
+          </li>
+        </ul>
+        <div class="tab-content" id="customTabContent3">
+          <div class="tab-pane fade show active" id="oneAA" role="tabpanel">
+            <div class="card mb-3">
+
+              <div class="table-container mb-3">
+                <div id="table_dailyreportHCNSIT" class="custom-tabulator"></div>
+              </div>
             </div>
+          </div>
         </div>
+
+        <div class="tab-pane fade" id="twoAA" role="tabpanel">
+          <!-- Card start -->
+          <div class="card mb-3">
+            <div class="table-container mb-3">
+              <div id="table_dailyreportCP" class="custom-tabulator">
+              </div>
+            </div>
+          </div>
+          <!-- Card end -->
+        </div>
+        <div class="tab-pane fade" id="threeAA" role="tabpanel">
+          <!-- Card start -->
+          <div class="card mb-3">
+            <div class="table-container mb-3">
+              <div id="table_dailyreportLX" class="custom-tabulator"></div>
+            </div>
+          </div>
+          <!-- Card end -->
+        </div>
+      </div>
     </div>
-<!-- thêm -->
   </div>
+  <!-- thêm -->
 </div>
