--- a/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.html
+++ b/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.html
@@ -118,10 +118,10 @@
 
       <!-- TBP approval group -->
       <div class="button-group">
-        <button class="btn btn-outline-success" id="btnApprove" (click)="IsApproved()">
+        <button style="font-size: 12px;" class="btn btn-outline-success" id="btnApprove" (click)="IsApproved()">
           <i class="fa-solid fa-check"></i> TBP duyệt
         </button>
-        <button class="btn btn-outline-danger" id="btnDisapprove" (click)="UnIsApproved()">
+        <button style="font-size: 12px;" class="btn btn-outline-danger" id="btnDisapprove" (click)="UnIsApproved()">
           <i class="fa-solid fa-xmark"></i> TBP hủy
         </button>
       </div>
