fix: fix bug khong hien thi table_dailyreportLX

--- a/src/app/components/dailyreport/dailyreport.component.html
+++ b/src/app/components/dailyreport/dailyreport.component.html
@@ -98,32 +98,27 @@
         <div class="tab-content" id="customTabContent3">
           <div class="tab-pane fade show active" id="oneAA" role="tabpanel">
             <div class="card mb-3">
-
               <div class="table-container mb-3">
                 <div id="table_dailyreportHCNSIT" class="custom-tabulator"></div>
               </div>
             </div>
           </div>
-        </div>
 
-        <div class="tab-pane fade" id="twoAA" role="tabpanel">
-          <!-- Card start -->
-          <div class="card mb-3">
-            <div class="table-container mb-3">
-              <div id="table_dailyreportCP" class="custom-tabulator">
+          <div class="tab-pane fade" id="twoAA" role="tabpanel">
+            <div class="card mb-3">
+              <div class="table-container mb-3">
+                <div id="table_dailyreportCP" class="custom-tabulator"></div>
               </div>
             </div>
           </div>
-          <!-- Card end -->
-        </div>
-        <div class="tab-pane fade" id="threeAA" role="tabpanel">
-          <!-- Card start -->
-          <div class="card mb-3">
-            <div class="table-container mb-3">
-              <div id="table_dailyreportLX" class="custom-tabulator"></div>
+
+          <div class="tab-pane fade" id="threeAA" role="tabpanel">
+            <div class="card mb-3">
+              <div class="table-container mb-3">
+                <div id="table_dailyreportLX" class="custom-tabulator"></div>
+              </div>
             </div>
           </div>
-          <!-- Card end -->
         </div>
       </div>
     </div>
