--- a/src/app/components/VPP/OfficeSupplyUnit/office-supply-component/office-supply-component.component.html
+++ b/src/app/components/VPP/OfficeSupplyUnit/office-supply-component/office-supply-component.component.html
@@ -7,7 +7,7 @@
     <button class="btn btn-outline-warning" (click)="openUnitModalForUpdateUnit()">
       <i class="fa-solid fa-pen-to-square"></i> Sửa
     </button>
-    <button class="btn btn-outline-danger">
+    <button class="btn btn-outline-danger" (click)="deleteUnit()">
       <i class="fa-solid fa-trash"></i> Xóa
     </button>
   </div>
