--- a/src/app/components/assetsmanagement/AssetAllocation/AssetAllocation.component.html
+++ b/src/app/components/assetsmanagement/AssetAllocation/AssetAllocation.component.html
@@ -47,34 +47,35 @@
           <i class="fas fa-plus me-2"></i>
         </button>
 
-        <button id="editBtn" class="btn btn-outline-success m-1">
+        <button id="editBtn" class="btn btn-outline-success m-1" (click)="openEditModal()">
           <i class="fas fa-edit me-2"></i>
         </button>
-        <button class="btn btn-outline-danger m-1">
+        <button class="btn btn-outline-danger m-1" (click)="DeleteALLocationn()">
           <i class="fas fa-trash-alt me-2"></i>
         </button>
         <button class="btn btn-outline-primary me-2" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#searchOffcanvas" aria-controls="searchOffcanvas" title="Tìm kiếm">
           <i class="fas fa-magnifying-glass"></i>
         </button>
-        <button class="btn btn-outline-success m-1">
+        <button class="btn btn-outline-success m-1" (click)="approveHR()">
           <i class="fas fa-check me-2" style="color: #66CC00;"></i>HR duyệt
         </button>
 
-        <button class="btn btn-outline-danger m-1">
+        <button class="btn btn-outline-danger m-1" (click)="cancelHR()">
           <i class="fas fa-xmark me-2" style="color: #ff0000;"></i>HR Hủy Duyệt
         </button>
 
-        <button class="btn btn-outline-success m-1">
+        <button class="btn btn-outline-success m-1" (click)="approveAccountant()">
           <i class="fas fa-check me-2" style="color: #66CC00;"></i>KT duyệt
         </button>
 
-        <button class="btn btn-outline-danger m-1">
+        <button class="btn btn-outline-danger m-1" (click)="cancelAccountant()">
           <i class="fas fa-xmark me-2" style="color: #ff0000;"></i>KT Hủy duyệt
         </button>
 
 
-        <button id="addBtn" class="btn btn-outline-success m-1 m-1">
+
+        <button id="addBtn" class="btn btn-outline-success m-1 m-1" (click)="exportToExcel()">
           <i class="fas fa-file-excel me-2"></i>Xuất phiếu
         </button>
       </div>
