--- a/src/app/components/assetsmanagement/assets-form/asset-modal.component.html
+++ b/src/app/components/assetsmanagement/assets-form/asset-modal.component.html
@@ -8,27 +8,26 @@
       </div>
       <div class="modal-body">
         <form>
-          <div class="row g-3">
-            <div class="col-md-4">
-              <label for="stt" class="col-form-label">STT</label>
-              <input type="number" [(ngModel)]="selectedAsset.STT" name="STT" class="form-control">
-            </div>
-            <div class="col-md-4">
+         <div class="row">
+  <div class="col-md-4">
+    <label for="stt" class="col-form-label">STT</label>
+    <input type="number" [(ngModel)]="selectedAsset.STT" name="STT" class="form-control">
+  </div>
 
-              <div class="col-md-6">
-                <label for="employeeID" class="form-label">Chọn người (*)</label>
-                <ng-select [(ngModel)]="selectedAsset.EmployeeID" name="employeeID" [items]="employee"
-                  bindLabel="FullName" bindValue="ID" placeholder="-- Chọn nhân viên --"
-                  (ngModelChange)="onEmployeeSelect($event)">
-                </ng-select>
+  <div class="col-md-4">
+    <label for="employeeID" class="form-label">Chọn người (*)</label>
+    <ng-select [(ngModel)]="selectedAsset.EmployeeID" name="employeeID" [items]="employee"
+      bindLabel="FullName" bindValue="ID" placeholder="-- Chọn nhân viên --"
+      (ngModelChange)="onEmployeeSelect($event)">
+    </ng-select>
+  </div>
 
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="department" class="col-form-label">Phòng ban (*)</label>
-              <input type="text" class="form-control" [value]="selectedDepartmentName" disabled />
-            </div>
-          </div>
+  <div class="col-md-4">
+    <label for="department" class="col-form-label">Phòng ban (*)</label>
+    <input type="text" class="form-control" [value]="selectedDepartmentName" disabled />
+  </div>
+</div>
+  
           <div class="row g-3">
             <div class="col-md-4">
               <label class="col-form-label">Loại tài sản (*)</label>
@@ -343,11 +342,10 @@
       <!-- Header -->
       <div class="modal-header bg-success">
         <h4 class="modal-title text-white" id="priceRequestModalLabel">
-          Cấp phát tài sản
+          {{ isEditMode ? 'Chỉnh sửa cấp phát tài sản' : 'Cấp phát tài sản' }}
         </h4>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-
       <!-- Body -->
       <div class="modal-body">
         <button id="addBtn" class="btn btn-outline-success m-1" (click)="showSelectAssetModal()">
@@ -355,10 +353,10 @@
         </button>
 
         <form class="row g-3">
-            <div class="col-md-6">
-              <label for="documentNumber" class="form-label">Số biên bản (*)</label>
-          <input id="allocationCode" type="text" class="form-control" [value]="generatedCode" readonly />
-            </div>
+          <div class="col-md-6">
+            <label for="documentNumber" class="form-label">Số biên bản (*)</label>
+            <input id="allocationCode" type="text" class="form-control" [value]="generatedCode" readonly />
+          </div>
           <div class="col-md-6">
             <label for="issueDate" class="form-label">Ngày cấp phát (*)</label>
             <input id="issueDate" type="date" class="form-control" name="issueDate" [(ngModel)]="allocationDate"
@@ -369,36 +367,26 @@
             <ng-select [(ngModel)]="selectedAsset.EmployeeID" name="employeeID" [items]="employee" bindLabel="FullName"
               bindValue="ID" placeholder="-- Chọn nhân viên --" (ngModelChange)="onEmployeeSelect($event)">
             </ng-select>
-
           </div>
-
           <div class="col-md-6">
             <label for="department" class="form-label">Phòng ban (*)</label>
             <input type="text" class="form-control" [value]="selectedDepartmentName" disabled />
           </div>
-
           <div class="col-md-6">
             <label for="department" class="form-label">Chức vụ (*)</label>
             <input type="text" class="form-control" [value]="selectedPositionName" disabled />
           </div>
-
           <div class="col-md-6">
             <label for="department" class="form-label">Ghi chú (*)</label>
             <textarea class="form-control" name="reportLossDescription" [(ngModel)]="reportLossDescription" rows="4"
               required></textarea>
           </div>
         </form>
-
         <button class="btn btn-sm btn-primary mt-3" type="button" (click)="addRow()">
           + Thêm dòng
         </button>
-
         <div #table class="mt-3" style="width: 100%"></div>
-
-
-
       </div>
-
       <!-- Footer -->
       <div class="modal-footer">
         <div class="modal-footer">
