fix: fix canvas hien thi khong dung + update: update css dailReport

--- a/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.html
+++ b/src/app/components/VPP/DangkyVPP/dangky-vpp/dangky-vpp.component.html
@@ -101,8 +101,7 @@
           <i class="fa-solid fa-copy"></i> Copy
         </button>
       </div>
-
-      <div class="vr"></div>
+      <div class="vr mt-1"></div>
 
       <!-- Admin approval group -->
       <div class="button-group">
