--- a/src/app/components/dailyreport/dailyreport.component.html
+++ b/src/app/components/dailyreport/dailyreport.component.html
@@ -68,7 +68,7 @@
         </button>
       </div>
 
-      <div class="vr"></div>
+      <div class="vr mt-2"></div>
 
       <!-- Excel import/export group -->
       <div class="button-group">
@@ -79,7 +79,7 @@
     </div>
 
     <!-- Tables -->
-    <div class="card-body">
+  
       <div class="custom-tabs-container">
         <ul class="nav nav-tabs" id="customTab3" role="tablist">
           <li class="nav-item" role="presentation">
@@ -98,7 +98,7 @@
         <div class="tab-content" id="customTabContent3">
           <div class="tab-pane fade show active" id="oneAA" role="tabpanel">
             <div class="card mb-3">
-              <div class="table-container mb-3">
+              <div class="table-container mb-3 ">
                 <div id="table_dailyreportHCNSIT" class="custom-tabulator"></div>
               </div>
             </div>
@@ -124,4 +124,3 @@
     </div>
   </div>
   <!-- thêm -->
-</div>
