update: cap nhat lai ten thu muc,file list-VPP to OfficeSupplies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
                     <ul class="sidebar-menu">
                         Quản lý Văn phòng phẩm
                         <li>
-                            <a class="btn bt    n-success" [routerLink]="['/listVPP']">Danh sách Văn phòng phẩm</a>
+                            <a class="btn bt    n-success" [routerLink]="['/OfficeSupplies']">Danh sách Văn phòng phẩm</a>
                         </li>
                         <li>
                             <a class="btn bt    n-success" [routerLink]="['/OUS']">Đơn vị tính</a>
