update: rename DkVPP to OfficeSupplyRequests

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
                             <a class="btn bt    n-success" [routerLink]="['/OUS']">Đơn vị tính</a>
                         </li>
                         <li>
-                            <a class="btn bt    n-success" [routerLink]="['/dkVPP']">Đăng ký Văn phòng phẩm</a>
+                            <a class="btn bt    n-success" [routerLink]="['/officeSupplyRequests']">Đăng ký Văn phòng phẩm</a>
                         </li>
                         <li>
                             <a class="btn bt    n-success" [routerLink]="['/officeSupplyRequestSummary']">Tổng hợp VPP</a>
