test checkout branch

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -153,6 +153,7 @@
                 <!-- Container starts -->
                 <div class="container-fluid">
                     <ng-template #viewcomponent></ng-template>
+                    <app-project-partlist-price-request></app-project-partlist-price-request>
                     
 
                 </div>
